--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 <body>
-  <a id="link" href="">click on me</a><br />
-  <textarea id="box" style="display: none"></textarea>
+  <a id="link" href="#">click on me</a><br />
+  <textarea id="box" style="display:none"></textarea>
   <ul id="list"></ul>
   <script data-main="app/js/main" src="components/requirejs/require.js"></script>
 </body>
